--- a/index.html
+++ b/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AI Universe Hub</title>
 
     <!-- Internal Css  -->
     <link rel="stylesheet" href="./CSS/style.css">
+
+    <!-- Bootstrap Link  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <!-- Start header area  -->
+    <Header>
+        <section class="my-4 text-center">
+            <h1>AI Universe Hub</h1>
+            <button type="button" class="btn btn-danger mt-3">Sort By Date</button>
+        </section>
+    </Header>
+
+    <!-- Start main area  -->
+    <main>
+        <section class="container mt-5">
+            <div id="card-container" class="row row-cols-1 row-cols-md-3 g-4">
+               
+                    <!-- This card code is added in js for dynamically add the data  -->             
+            </div>
+
+        </section>
+
+    </main>
 
 
+    <footer>
+
+    </footer>
+
+
+
+    <!-- Internal script  -->
     <script src="./Script/app.js"></script>
+    <!-- External script  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
