--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Universe Hub</title>
 
+    <!-- Font awesome link  -->
+    <script src="https://kit.fontawesome.com/1950ee4dcd.js" crossorigin="anonymous"></script>
+
     <!-- Internal Css  -->
     <link rel="stylesheet" href="./CSS/style.css">
 
