implement see more button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 
         </section>
 
+        <section class="my-4 text-center">
+            <button id="show-all" onclick="showAllData()" type="button" class="btn btn-danger py-2 px-4">See More</button>
+        </section>
+
     </main>
 
 
