add modal image area with accuray

--- a/index.html
+++ b/index.html
@@ -47,18 +47,21 @@
             <!-- Modal -->
             <div class="modal fade" id="aiPage" tabindex="-1" aria-labelledby="aiPageLabel"
                 aria-hidden="true">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-lg">
                     <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="aiPageLabel">Modal title</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <div class="modal-head">                         
+                            <i data-bs-dismiss="modal" aria-label="Close" class="fa-solid fa-circle-xmark"></i>
                         </div>
-                        <div id="modal-body" class="modal-body">
-                           
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+                        <div class="modal-body pb-5 mt-4">
+
+                        <!-- GRID MODAL LAYOUT  -->
+                            <div class="container-fluid">
+                                <div class="row">
+                                  <div id="modal-text" class="col-md-6"></div>
+                                  <div  id="modal-img" class="col-md-6 ms-auto"> </div>
+                                </div>
+                              </div>
+
                         </div>
                     </div>
                 </div>
