--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="modal-head">                         
                             <i data-bs-dismiss="modal" aria-label="Close" class="fa-solid fa-circle-xmark"></i>
                         </div>
-                        <div class="modal-body pb-5 mt-1">
+                        <div class="modal-body pb-4 mt-1">
 
                         <!-- GRID MODAL LAYOUT  -->
                             <div class="container-fluid">
@@ -66,6 +66,15 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+
+        <section id="spinner-container" class="d-none">
+            <div class="d-flex justify-content-center">
+                <div class="spinner-border" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </div>
         </section>
 
     </main>
