--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
                         <!-- GRID MODAL LAYOUT  -->
                             <div class="container-fluid">
-                                <div class="row">
-                                  <div id="modal-text" class="col-md-6"></div>
-                                  <div  id="modal-img" class="col-md-6 ms-auto"> </div>
+                                <div class="row g-4">
+                                  <div id="modal-text" class="col-md-6 col-12"></div>
+                                  <div  id="modal-img" class="col-md-6 col-12 ms-auto"> </div>
                                 </div>
                               </div>
 
